--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
       <p class="text-sm text-gray-500">Certifique-se de estar na sede e prepare-se para a selfie</p>
     </div>
 
-    <div id="selfiePreview" class="w-full h-48 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
-      <i class="fa-solid fa-camera text-gray-500 text-3xl"></i>
+    <div class="mb-4">
+      <video id="video" class="w-full rounded-lg" autoplay muted playsinline></video>
+      <canvas id="canvas" class="hidden"></canvas>
     </div>
 
     <button id="captureSelfie" class="w-full bg-cyan-500 hover:bg-cyan-600 text-white py-3 rounded-xl text-lg font-semibold">
@@ -34,10 +35,87 @@
   </div>
 
   <script>
-    // Lógica JS será implementada aqui futuramente
-    document.getElementById('captureSelfie').addEventListener('click', () => {
-      document.getElementById('statusMessage').textContent = 'Verificando localização e câmera...';
+    const video = document.getElementById('video');
+    const canvas = document.getElementById('canvas');
+    const captureBtn = document.getElementById('captureSelfie');
+    const statusMessage = document.getElementById('statusMessage');
+
+    const sedeLat = -23.477944;
+    const sedeLng = -46.650889;
+    const raioPermitido = 30; // metros
+
+    // Ativa câmera
+    async function startCamera() {
+      try {
+        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+        video.srcObject = stream;
+      } catch (err) {
+        statusMessage.textContent = 'Erro ao acessar a câmera: ' + err.message;
+      }
+    }
+
+    // Calcula distância entre coordenadas
+    function calcularDistancia(lat1, lon1, lat2, lon2) {
+      const R = 6371e3; // raio da Terra em metros
+      const rad = Math.PI / 180;
+      const dLat = (lat2 - lat1) * rad;
+      const dLon = (lon2 - lon1) * rad;
+
+      const a = Math.sin(dLat / 2) ** 2 +
+                Math.cos(lat1 * rad) * Math.cos(lat2 * rad) *
+                Math.sin(dLon / 2) ** 2;
+      const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+
+      return R * c; // metros
+    }
+
+    // Captura selfie + localização
+    captureBtn.addEventListener('click', () => {
+      if (!navigator.geolocation) {
+        statusMessage.textContent = 'Geolocalização não suportada pelo navegador.';
+        return;
+      }
+
+      navigator.geolocation.getCurrentPosition(position => {
+        const userLat = position.coords.latitude;
+        const userLng = position.coords.longitude;
+        const distancia = calcularDistancia(userLat, userLng, sedeLat, sedeLng);
+
+        if (distancia > raioPermitido) {
+          statusMessage.textContent = `Fora da área permitida (${Math.round(distancia)}m). Ponto não registrado.`;
+          return;
+        }
+
+        // Captura imagem da câmera
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
+        const ctx = canvas.getContext('2d');
+        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+        const imagemData = canvas.toDataURL('image/png');
+
+        // Define tipo de ponto
+        const agora = new Date();
+        const hora = agora.getHours();
+        const minuto = agora.getMinutes();
+        const totalMin = hora * 60 + minuto;
+        let tipo = 'Ponto Extra';
+
+        if (totalMin >= 420 && totalMin <= 540) tipo = 'Entrada'; // 07:00 - 09:00
+        else if (totalMin >= 720 && totalMin <= 780) tipo = 'Saída para Almoço'; // 12:00 - 13:00
+        else if (totalMin >= 781 && totalMin <= 900) tipo = 'Retorno do Almoço'; // 13:01 - 15:00
+        else if (totalMin >= 1020 && totalMin <= 1080) tipo = 'Saída'; // 17:00 - 18:00
+
+        statusMessage.innerHTML = `<span class="text-green-600 font-medium">${tipo}</span> registrado com sucesso às ${hora.toString().padStart(2, '0')}:${minuto.toString().padStart(2, '0')}.`;
+
+        // Aqui podemos salvar no localStorage ou banco depois
+        // Ex: localStorage.setItem("ponto", JSON.stringify({ tipo, imagemData, horario: agora.toISOString() }))
+      }, err => {
+        statusMessage.textContent = 'Erro ao obter localização: ' + err.message;
+      });
     });
+
+    // Inicia câmera ao carregar
+    startCamera();
   </script>
 </body>
 </html>
