--- a/login.html
+++ b/login.html
@@ -55,5 +55,51 @@
       }
     });
   </script>
+  <!-- Firebase App -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
+
+<!-- Firebase Auth -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
+
+<!-- Firebase Firestore -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
+
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyCzy5KwdkK0GCzZ5o6i1lOK7WsdheSYV9g",
+    authDomain: "controle-de-ponto-papelprint.firebaseapp.com",
+    projectId: "controle-de-ponto-papelprint",
+    storageBucket: "controle-de-ponto-papelprint.appspot.com",
+    messagingSenderId: "630875968731",
+    appId: "1:630875968731:web:2dc067757a090bc16c28fe"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+  const auth = firebase.auth();
+</script>
+<!-- Firebase App -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
+
+<!-- Firebase Auth -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
+
+<!-- Firebase Firestore -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
+
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyCzy5KwdkK0GCzZ5o6i1lOK7WsdheSYV9g",
+    authDomain: "controle-de-ponto-papelprint.firebaseapp.com",
+    projectId: "controle-de-ponto-papelprint",
+    storageBucket: "controle-de-ponto-papelprint.appspot.com",
+    messagingSenderId: "630875968731",
+    appId: "1:630875968731:web:2dc067757a090bc16c28fe"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+  const auth = firebase.auth();
+</script>
 </body>
 </html>
