--- a/login.html
+++ b/login.html
@@ -11,6 +11,24 @@
       font-family: 'Poppins', sans-serif;
     }
   </style>
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyCzy5KwdkK0GCzZ5o6i1lOK7WsdheSYV9g",
+      authDomain: "controle-de-ponto-papelprint.firebaseapp.com",
+      projectId: "controle-de-ponto-papelprint",
+      storageBucket: "controle-de-ponto-papelprint.appspot.com",
+      messagingSenderId: "630875968731",
+      appId: "1:630875968731:web:2dc067757a090bc16c28fe"
+    };
+
+    const app = firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const db = firebase.firestore();
+  </script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
   <div class="w-full max-w-sm bg-white p-6 rounded-2xl shadow-lg">
@@ -18,8 +36,8 @@
 
     <form id="loginForm" class="space-y-4">
       <div>
-        <label for="usuario" class="block text-sm font-medium text-gray-700">Usuário</label>
-        <input type="text" id="usuario" class="w-full mt-1 p-2 border border-gray-300 rounded-lg" required />
+        <label for="usuario" class="block text-sm font-medium text-gray-700">E-mail</label>
+        <input type="email" id="usuario" class="w-full mt-1 p-2 border border-gray-300 rounded-lg" required />
       </div>
 
       <div>
@@ -39,67 +57,32 @@
     const form = document.getElementById('loginForm');
     const erro = document.getElementById('erro');
 
-    form.addEventListener('submit', e => {
+    form.addEventListener('submit', async e => {
       e.preventDefault();
-      const usuario = document.getElementById('usuario').value.trim();
+      const email = document.getElementById('usuario').value.trim();
       const senha = document.getElementById('senha').value.trim();
 
-      const usuarios = JSON.parse(localStorage.getItem('funcionarios')) || [];
-      const usuarioValido = usuarios.find(u => u.usuario === usuario && u.senha === senha);
+      try {
+        const credenciais = await auth.signInWithEmailAndPassword(email, senha);
+        const uid = credenciais.user.uid;
 
-      if (usuarioValido) {
-        localStorage.setItem('usuarioLogado', JSON.stringify(usuarioValido));
-        window.location.href = 'index.html';
-      } else {
+        // Buscar dados adicionais no Firestore
+        const docRef = db.collection('funcionarios').doc(uid);
+        const doc = await docRef.get();
+
+        if (doc.exists) {
+          localStorage.setItem('usuarioLogado', JSON.stringify(doc.data()));
+          window.location.href = 'index.html';
+        } else {
+          erro.textContent = 'Usuário sem dados vinculados no Firestore.';
+          erro.classList.remove('hidden');
+        }
+      } catch (err) {
+        console.error(err);
+        erro.textContent = 'Usuário ou senha inválidos.';
         erro.classList.remove('hidden');
       }
     });
   </script>
-  <!-- Firebase App -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
-
-<!-- Firebase Auth -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
-
-<!-- Firebase Firestore -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
-
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCzy5KwdkK0GCzZ5o6i1lOK7WsdheSYV9g",
-    authDomain: "controle-de-ponto-papelprint.firebaseapp.com",
-    projectId: "controle-de-ponto-papelprint",
-    storageBucket: "controle-de-ponto-papelprint.appspot.com",
-    messagingSenderId: "630875968731",
-    appId: "1:630875968731:web:2dc067757a090bc16c28fe"
-  };
-
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-  const auth = firebase.auth();
-</script>
-<!-- Firebase App -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
-
-<!-- Firebase Auth -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
-
-<!-- Firebase Firestore -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
-
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCzy5KwdkK0GCzZ5o6i1lOK7WsdheSYV9g",
-    authDomain: "controle-de-ponto-papelprint.firebaseapp.com",
-    projectId: "controle-de-ponto-papelprint",
-    storageBucket: "controle-de-ponto-papelprint.appspot.com",
-    messagingSenderId: "630875968731",
-    appId: "1:630875968731:web:2dc067757a090bc16c28fe"
-  };
-
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-  const auth = firebase.auth();
-</script>
 </body>
 </html>
